--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "appInmobiliaria:build:production"
+              "browserTarget": "appInmobiliaria:build:production",
+              "proxyConfig": "proxy.config.json"
             },
             "development": {
               "browserTarget": "appInmobiliaria:build:development"
